--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@faker-js/faker": "^6.1.2",
     "cypress": "^9.5.3",
     "moment": "^2.29.3",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "underscore": "^1.13.4"
   }
 }
