--- a/.github/workflows/chrome-ui-tests.yml
+++ b/.github/workflows/chrome-ui-tests.yml
@@ -11,7 +11,7 @@ jobs:
   # This workflow contains a single job called "build"
   chrome-ui-tests:
     runs-on: ubuntu-latest
-    container: cypress/browsers:node12.18.3-chrome87-ff82
+    container: cypress/browsers:node14.19.0-chrome100-ff99-edge
     strategy:
       fail-fast: false
       matrix:
